k8s/order-deployment.yaml
# order-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-deployment
  labels:
    app: order-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service-container
          # 🐳 Docker Hub에 푸시한 이미지 이름으로 변경
          image: creamdocker/order-service:1.0.0
          ports:
            - containerPort: 8081 # Order Service가 사용하는 포트
---
apiVersion: v1
kind: Service
metadata:
  name: order-service # 외부 접근을 위한 서비스 이름
spec:
  selector:
    app: order-service
  ports:
    - port: 8081
      targetPort: 8081
      # NodePort 타입으로 설정하여 외부에서 접근 가능하게 설정
      nodePort: 30081 # 외부에 노출될 포트 (30000-32767 범위)
  type: NodePort
