k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: omni-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # [1] 주문 서비스 (order-service)
          # kubectl get svc -> 8081/TCP 확인됨
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8081

          # [2] 상품 서비스 (product-service)
          # kubectl get svc -> 8082/TCP 확인됨 (아까 8081로 적어서 에러남)
          - path: /products
            pathType: Prefix
            backend:
              service:
                name: product-service
                port:
                  number: 8082  # <--- [중요] 8082로 수정!

          # [3] 메시지 서비스 (message-service)
          # kubectl get svc -> 8083/TCP 확인됨
          - path: /messages
            pathType: Prefix
            backend:
              service:
                name: message-service
                port:
                  number: 8083

          # [4] 유레카 (eureka-service)
          # kubectl get svc -> 8761 확인됨
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: eureka-server
                port:
                  number: 8761
